메뉴버튼 로그인 생성
메뉴바 우측 로그인 아이콘 및 변환기능 생성
-. Prompt를 통해 받은 username 저장 수단 필요
-. 지금은 그저 껍대기만 있음.
-. username을 받아서 기존에 user가 추가했던 본인의 음악목록을 불러올수있게 해야함.
   -> 아직 멀었지

--- a/style.css
+++ b/style.css
@@ -49,6 +49,8 @@ a {
 }
 
 .Header_icons {
+  display: flex;
+  align-items: center;
   list-style: none;
   font-size: 24px;
   padding: 0;
@@ -58,11 +60,32 @@ a {
   color: black;
 }
 
+.Header_icons #login_icons {
+  padding-left: 10px;
+}
+
+.Header_icons #login_icons {
+  padding-left: 10px;
+}
+
+.Header_icons #user_icons {
+  padding-left: 10px;
+}
+
+.Header_icons :hover {
+  font-weight: bold;
+  color: darkslategray;
+}
+
 .Header_toggleBtn {
   display: none;
   position: absolute;
   right: 24px;
   font-size: 24px
+}
+
+.hidden {
+  display: none;
 }
 
 @media (max-width: 768px) {
